Thu Dec 18 10:28:17 GMT 2014  Olly Betts <olly@survex.com>

	* common/safesyssocket.h: Include safeerrno.h when we use errno.

Thu Dec 18 06:17:18 GMT 2014  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Use POSIX O_NONBLOCK in preference to O_NDELAY
	  which has different semantics on BSD and System V.

Wed Dec 17 02:59:54 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Drop probe for gethostbyaddr() - we've not used it for
	  over 8.5 years (since e33972a5).

Wed Dec 17 02:33:36 GMT 2014  Olly Betts <olly@survex.com>

	* common/internaltypes.h: Take CHAR_BIT into account when choosing
	  types for uint2, uint4 and uint8.

Wed Dec 17 02:30:14 GMT 2014  Olly Betts <olly@survex.com>

	* api/error.cc,backends/chert/chert_btreebase.cc,
	  backends/chert/chert_table.cc,backends/flint_lock.cc,
	  backends/glass/glass_table.cc,common/,configure.ac,
	  net/remoteconnection.cc: Add errno_to_string() function which is
	  thread-safe where a suitable alternative to strerror() exists.

Tue Dec 16 06:54:32 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Add missing m4 quoting.  Generated configure file is
	  unchanged.

Tue Dec 16 06:28:21 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Don't check for strerror - it's specified by C89, and
	  we weren't using the result of the check anyway.

Tue Dec 16 03:59:39 UTC 2014  Sébastien Debrard <sebastien.debrard@gmail.com>

	* api/omenquire.cc,backends/multi/multi_postlist.cc,
	  tests/api_anydb.cc,tests/api_db.cc: Prefer ++x to x++.

Tue Dec 16 03:50:41 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Define MINGW_HAS_SECURE_API under mingw to get
	  _putenv_s() declared in stdlib.h.

Sun Dec 14 09:42:01 GMT 2014  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,include/xapian/database.h: Make overloaded forms of
	  Database::allterms_begin() and Database::allterms_end() use default
	  parameters instead.

Sat Dec 13 02:48:10 GMT 2014  Olly Betts <olly@survex.com>
